fixed some alignment with footer

--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -103,7 +103,7 @@ body {
 
   header {
     .mobile-logo {
-      width: 35%;
+      width: 50%;
       @media screen and (min-width: 769px) {
         display: none;
       }
@@ -304,13 +304,12 @@ footer {
   height: 120px;
   width: 100%;
   display: flex;
-  justify-content: center;
+  justify-content: space-around;
   align-items: center;
   font-size: 12px;
   margin-top: auto;
   position: sticky;
   margin-bottom: 20px;
-  z-index: 500;
 }
 @media screen and (min-width: 769px) {
   main {
